reflectivity - reflectance etc

--- a/expe.tex
+++ b/expe.tex
@@ -5,7 +5,7 @@ The numerical data presented in this thesis could be in some cases corroborated 
 % Note: it would be useful to find: Grüner - 1998 - Millimeter and Submillimeter Wave Spectroscopy of
 
 The basic principle of the measurement is similar to the scattering-parameter retrieval in FDTD simulations presented in Chapter \ref{chapter_sparam}.
- A short, broadband pulse impinged the sample, one part of its energy was transmitted, another reflected and the rest was dissipated in the sample. The transmitted pulse was then recorded by the time-domain sampling setup, and processed to obtain the transmission amplitude and phase as functions of frequency.
+ A short, broadband pulse impinged the sample, one part of its energy was transmitted, another reflected and the rest was dissipated in the sample. The transmitted pulse was then recorded by the time-domain sampling setup, and processed to obtain the transmittance amplitude and phase as functions of frequency.
 
 The reflectance could not be directly measured in the setup described, but at the end of this section an indirect method is described that allows to compute the equivalent sample properties from the subsequent echoes that arise when the sample is surrounded by thick transparent slabs of sapphire. 
 In the following, we give details on the optical and terahertz experimental setup.
@@ -30,7 +30,7 @@ The diameter of the active region on the TeraSED emitter was comparable with the
  mirror and refocused at the sample. Upon passing through it, they diffracted again and were collected by an identical ellipsoidal mirror and focused at the detector. 
 To allow enough clearance for a bigger instrumentation surrounding a sample, such as a liquid-helium cryostat or a heating furnace, the ellipsoidal mirrors were separated by 0.3 m and the whole beam path approached 0.6 m. % TODO check with a ruler
 
-Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air in a significant concentration. The absorption forms clear notches in the terahertz transmission spectra, for instance around 0.62, 0.75, 1.07 and 1.41 THz, which can be traced down to discrete rotational levels of the water molecules \cite{exter1989}. In the time domain, the absorption manifests itself as a exponentially decaying ringdown. %that has polarity opposite to the main THz peak.
+Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air in a significant concentration. The absorption forms clear notches in the terahertz transmittance spectra, for instance around 0.62, 0.75, 1.07 and 1.41 THz, which can be traced down to discrete rotational levels of the water molecules \cite{exter1989}. In the time domain, the absorption manifests itself as a exponentially decaying ringdown. %that has polarity opposite to the main THz peak.
 % TODO figure from my web
 In order to avoid such a signal deformation,
 the whole terahertz wave path has to be in an environment free of water vapour, and the fastest way to reliably achieve this was to enclose the emitter, mirrors, sample and detector in a vacuum chamber evacuated by a two-stage rotary pump. 
@@ -54,14 +54,14 @@ To reduce the noise, synchronous detection with the \textit{Stanford SRS360} loc
 
 %The time constant of the lock-in acquisition was comparable to the time which was needed by the delay lines to introduce a picosecond delay. As a result, the speed of delay lines movement suppressed the high-frequency components of the detected signal. Attention must be paid at precise control of the delay line speed and software compensation of the artifacts.
 
-The spectral response of both the emitter and electrooptic sampling substantially influenced the measured sample spectra. Moreover, the phase of the recorded waves was modulated too, as a beam passing through a focus acquires additional phase due to the Gouy shift \cite{kuzel2010gouy}. Every transmission measurement was therefore normalized in frequency domain against a corresponding free-space reference, so that both the amplitude and phase artifacts cancelled out. 
+The spectral response of both the emitter and electrooptic sampling substantially influenced the measured sample spectra. Moreover, the phase of the recorded waves was modulated too, as a beam passing through a focus acquires additional phase due to the Gouy shift \cite{kuzel2010gouy}. Every transmittance measurement was therefore normalized in frequency domain against a corresponding free-space reference, so that both the amplitude and phase artifacts cancelled out. 
 
 %}}}
 
 \subsection{Simultaneous reflectance and transmittance measurement}
 \paragraph{Principle} %{{{
 \label{srtm}
-With rearrangement of optics, it would be possible to measure the \textit{reflectance spectrum}, similarly as the transmission was measured. However, due to the complexity of such a setup and its very high sensitivity to the sample displacement, we did not use a second sampling branch for detecting the reflected signal. Instead of using two sampling schemes, we recovered the amplitude and phase reflectance of the sample by stacking it between a pair of thick (3 and 6 mm) sapphire slabs \cite{nemec2012resonant}. Thanks to the relatively high refractive index of sapphire in the terahertz range along the optical axis, $N \approx$ 3.068, these slabs introduce several time-delayed pulse reflections, also called echoes, into the transmitted signal.
+With rearrangement of optics, it would be possible to measure the \textit{reflectance spectrum}, similarly as the transmittance was measured. However, due to the complexity of such a setup and its very high sensitivity to the sample displacement, we did not use a second sampling branch for detecting the reflected signal. Instead of using two sampling schemes, we recovered the amplitude and phase reflectance of the sample by stacking it between a pair of thick (3 and 6 mm) sapphire slabs \cite{nemec2012resonant}. Thanks to the relatively high refractive index of sapphire in the terahertz range along the optical axis, $N \approx$ 3.068, these slabs introduce several time-delayed pulse reflections, also called echoes, into the transmitted signal.
 %\begin{figure} \caption{A broadband pulse passes through a single layer of microspheres randomly arranged between two sapphire slabs and is sampled by electrooptical detection.}  \centering \includegraphics[width=12cm]{img/expe/sample_sapphires.pdf} \end{figure}			%% TODO no use for this figure?
 
 If the beam divergence is neglected, each optical element can be characterised by its complex transfer function in the resulting spectrum. One needs to define three intrinsic transmittance functions: that for the beam passing through the volume of the thin sapphire $A(f)$, the one of the thick sapphire $B(f)$ and one through the thin sample $t_S(f)$; all of these are without the effect of reflection at interfaces. 
@@ -85,9 +85,9 @@ The terahertz beam is relatively tightly focused, and the focus of the echoes is
 The deconvolution algorithm can compensate for slight focus displacement by changing the amplitude  of different frequency components, or shifting them in phase. 
 
 However, due to the hyperbolic shape of the gaussian beam, with its Rayleigh length $z_{R}$ being similar to the sapphire thickness\footnote{As an approximate example, for the main frequency component $f = 1.5$ THz with wavelength $\lambda = c / f \approx 200$~$\upmu$m, for $\vartheta \lesssim 0.15$ rad as an estimated divergence of the beam from its axis, the Rayleigh half-length of a gaussian beam would be $z_{R} = \frac{\lambda}{\pi \vartheta^{2}} \gtrsim 2.8$ mm, i.e. roughly the thickness of the thinner sapphire.}, the overall effect of two sapphires can not be linearly compensated from two separate measurements of each of them.} 
- \item{The possible asymmetry of the sample with regard to the beam axis can substantially bias the measured reflectivity. This happened during the characterisation of the dielectric spheres, when the sapphire distance was defined by a $\approx$60$\upmu$m teflon spacer. The nonuniform size of the resonators required us to attach them to one of the sapphire windows. While the spheres with the 60$\upmu$m diameter were placed symmetrically in the gap, the smaller spheres had an asymmetric position. Since the latter have higher resonance frequencies, the effect of asymmetry was probably also frequency dependent. } 
+ \item{The possible asymmetry of the sample with regard to the beam axis can substantially bias the measured reflectance. This happened during the characterisation of the dielectric spheres, when the sapphire distance was defined by a $\approx$60$\upmu$m teflon spacer. The nonuniform size of the resonators required us to attach them to one of the sapphire windows. While the spheres with the 60$\upmu$m diameter were placed symmetrically in the gap, the smaller spheres had an asymmetric position. Since the latter have higher resonance frequencies, the effect of asymmetry was probably also frequency dependent. } 
  \item{The sapphire slabs can influence the near field of resonances in some samples, c.f. Sect. \ref{par_nearfield}. This error should not be significant in transversally homogeneous samples (i.e. slabs), nor in samples that are made of dielectrics with much higher permittivity than that of sapphire. However for some samples, such as metallic resonators, the spectra are be completely changed in the vicinity of a dielectric (see its application on a fishnet sample in Fig. 4.19 in Ref. \cite{yahiaoui2011phd}). }
- \item{Finally, it follows from Eq. (\ref{eq_Neff}) that reliable reflection data can only be retrieved at frequencies where also the transmission amplitude is strong enough for the signal not to be dominated by noise. }
+ \item{Finally, it follows from Eq. (\ref{eq_Neff}) that reliable reflection data can only be retrieved at frequencies where also the transmittance amplitude is strong enough for the signal not to be dominated by noise. }
  \end{enumerate}
 \label{srtm2}
 
@@ -226,7 +226,7 @@ The femtosecond laser used was different from that serving as the femtosecond so
 
 The 3 mm wide beam was focused by a lens with a focal length of 10 mm or 50 mm (Fig. \ref{fg_microfab}a). The tighter focusing lead to a better resolution, but had stricter requirements for accurate focusing of the beam. To facilitate the task of optimal focusing, we devised a focusing-collimating setup which used the fact that  the  steel foil reflected the light like from a point source only when it was exactly in the lens focus. Then the reflected light would be collimated again by the very same lens into a beam returning to the laser. 
 %the reflection would not be collimated if the reflection occurred in front of the focal plane or behind it. 
-A part of the reflected beam energy was reflected sideways by a skewed glass in front of the lens, so that one could finely align the lens seeking for the smallest spot diameter on a distant screen.
+A part of the beam energy reflected from the metal sheet was separated sideways by a skewed glass in front of the lens, so that one could finely align the lens seeking for the smallest spot diameter on a distant screen.
 
 A compact stepper-motor controller of a custom design \cite{dominec2015_triostepper} facilitated to automate the sample movement by means of computer control operated by a Python script. The sequences of shutter opening, sample movement and shutter closing could be assembled into a program for fabrication of a whole mesh sample of ca. 10 mm diameter, which took about 30 minutes to finish. Multiple different meshes with different parameters could be cut out from one steel foil in a batch, without user interaction.
 
