--- a/tables.tex
+++ b/tables.tex
@@ -50,6 +50,7 @@ $\B$ 		& Magnetic displacement									\vspace{3mm}\\
 $\varepsilon_0$ &Vacuum permittivity, $8.85\cdot10^{-12}$ F/m\\
 $\mu_0$		&Vacuum permeability, $1.25\cdot10^{-6}$ H/m			\vspace{3mm}\\
  
+$r, t$		& reflectance, transmittance\\
 $\ii$		& Imaginary unit, $\ii^2 = -1$\\
 $e$ 		& Euler constant, $e = 2.718\ldots$\\
 $\pi$ 		& $\pi = 3.141\ldots$\\
